--- a/posts/templates/posts/others.html
+++ b/posts/templates/posts/others.html
@@ -14,8 +14,13 @@
             <br /> <br />
             <div class="workout-show">
                 <a href="{% url 'posts:post_show' post.id %}" class="text-decoration-none">
-                    <p class="text-capitalize">
-                        {{post.workout}}</p>
+                    <p class="hide-text">
+                        {{post.get_workout}} </p>
+                    <ul class="text-capitalize workout">
+                        {%for workout in post.get_workout %}
+                        <li>
+                            {{workout}}</li>{%endfor%}
+                    </ul>
                 </a>
             </div>
         </div>
