--- a/posts/static/posts/main.css
+++ b/posts/static/posts/main.css
@@ -54,6 +54,21 @@ body {
     overflow: auto;
 }
 
+.text-capitalize.workout-show {
+    max-height: 15em;
+    min-height: 15em;
+    margin-left: -0.5em;
+    overflow: hidden auto;
+}
+
+.text-capitalize.workout-show::-webkit-scrollbar {
+    display: none;
+}
+
+.text-capitalize.workout::-webkit-scrollbar {
+    display: none;
+}
+
 .date-text {
     font-size: 14px;
     text-align: end;
