--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -24,8 +24,17 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
+
+                    <li class="nav-item">
+                        <form action="{% url 'posts:search_result' %}" method="get">
+                            <input name="query" type="text" placeholder="Search here..">
+                            <button type="submit" name="button">Submit</button>
+                        </form>
+                    </li>
 
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href={% url 'posts:post_create'%}><img
