--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -72,20 +72,30 @@
                 No Posts Yet
             </div>
             {% endfor %}
+
             <div class="pagination">
-                <span class="step-links">
+                <div class="previous">
                     {% if page_obj.has_previous %}
-                    <a href="?page=1">&laquo; first</a>
+                    <a href="?page=1">&laquo; first</a>&nbsp;&nbsp;
                     <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-                    {% endif %}
-                    <span class="current">
+                    {% endif %} </p>
+                </div>
+                <div class="current">
+                    <p class="current">
                         Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-                    </span>
-                    {% if page_obj.has_next %}
-                    <a href="?page={{ page_obj.next_page_number }}">Next 8 </a>
-                    <a href="?page={{ page_obj.paginator.num_pages }}">Last &raquo;</a>
-                    {% endif %}
-                </span>
+                    </p>
+                </div>
+
+                <div class="next">
+                    <p>
+                        {% if page_obj.has_next %}
+                        <a href="?page={{ page_obj.next_page_number }}">next 8</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a href="?page={{ page_obj.paginator.num_pages }}">last page&raquo;</a>
+                        {% endif %}
+                    </p>
+                </div>
+
+
             </div>
         </div>
     </div>
