shifted page num

--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -89,8 +89,8 @@
                 <div class="next">
                     <p>
                         {% if page_obj.has_next %}
-                        <a href="?page={{ page_obj.next_page_number }}">next 8</a>&nbsp;&nbsp;&nbsp;&nbsp;
-                        <a href="?page={{ page_obj.paginator.num_pages }}">last page&raquo;</a>
+                        <a href="?page={{ page_obj.next_page_number }}">next 8</a>&nbsp;&nbsp;
+                        <a href="?page={{ page_obj.paginator.num_pages }}">last page &raquo;</a>
                         {% endif %}
                     </p>
                 </div>
