--- a/posts/templates/posts/comments.html
+++ b/posts/templates/posts/comments.html
@@ -34,7 +34,7 @@
             {% empty %}
             <br />
             <div class="empty alert alert-light" role="alert">
-                No Comments Yet
+                Be the first to comment!
             </div>
             {% endfor %}
         </div>
