--- a/posts/templates/posts/edit.html
+++ b/posts/templates/posts/edit.html
@@ -3,26 +3,27 @@
 <div class="text-center">
     <h1> {{post.name}} </h1>
 </div>
-
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
-            <img src="{{post.image.url}}" class="index-image" />
-            <br /> <br />
-            <div class="workout-show">
-                <p class="hide-text">
-                    {{post.get_workout}} </p>
-                <ul class="text-capitalize workout">
-                    {%for workout in post.get_workout %}
-                    <li>
-                        {{workout}}</li>{%endfor%}
-                </ul>
+        <div class="col-md-4">
+            <div class="card">
+                <img src="{{post.image.url}}" class="index-image" />
+                <br />
+                <div class="workout-show">
+                    <p class="hide-text">
+                        {{post.get_workout}} </p>
+                    <ul class="text-capitalize workout">
+                        {%for workout in post.get_workout %}
+                        <li>
+                            {{workout}}</li>{%endfor%}
+                    </ul>
+                </div>
             </div>
         </div>
-
         {% if edit %}
-        <div class="col-md-6">
-            <form action="{% url 'posts:post_show' post.id %}?action=edit" method="post" enctype="multipart/form-data">
+        <div class="col-md-6 edit">
+            <form action="{% url 'posts:post_show' post.id %}?action=edit" method="post" enctype="multipart/form-data"
+                class="edit-form">
                 {% csrf_token %}
 
                 {{form.as_p}}
