--- a/accounts/static/accounts/accounts.css
+++ b/accounts/static/accounts/accounts.css
@@ -3,6 +3,14 @@
 body {
     font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: 20px;
+    background-image: linear-gradient(135deg, #3c8ce7 10%, #00eaff 100%);
+    color: rgb(0, 0, 0);
+    height: 100%;
+}
+
+html {
+    background-image: linear-gradient(135deg, #3c8ce7 10%, #00eaff 100%);
+    height: 100%;
 }
 
 .login-container {
