--- a/posts/static/posts/main.css
+++ b/posts/static/posts/main.css
@@ -117,6 +117,11 @@ a:hover {
     height: 3em;
 }
 
+.text-center.index {
+    width: 100%;
+    height: 0em;
+}
+
 .like-form {
     text-align: end;
     margin-top: -32px;
