--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,12 @@
     <title>Fitspogram</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+    </script>
     <link rel="stylesheet" href="{% static 'posts/main.css' %}" />
 </head>
+
 <body>
     <nav class=" navbar navbar-expand-lg navbar-light bg-light mb-3">
         <div class="container-fluid">
@@ -25,7 +30,7 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
-                    <li>
+                    <li class="nav-item">
                         <form action="{% url 'posts:search_result' %}" method="get" class="input-group rounded ">
                             {% csrf_token %}
                             <input name="query" type="text" placeholder="Search User"
