--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -1,5 +1,8 @@
 {% extends 'posts/base.html' %}
 {% block body %}
+<div class="text-center">
+    <h1>Inspo for Fitspo</h1>
+</div>
 <div class="container">
     <div class="col-md-9">
         <div class="row gy-2">
