--- a/posts/templates/posts/comments.html
+++ b/posts/templates/posts/comments.html
@@ -9,18 +9,21 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4">
-            <img src="{{post.image.url}}" class="index-image" /><br /><br />
-            <div class="workout-show">
-                <a href="{% url 'posts:post_show' post.id %}" class="text-decoration-none">
-                    <p class="hide-text">
-                        {{post.get_workout}} </p>
-                    <ul class="text-capitalize workout-show">
-                        {%for workout in post.get_workout %}
-                        <li>
-                            {{workout}}</li>{%endfor%}
-                    </ul>
-                </a>
+            <div class="card">
+                <img src="{{post.image.url}}" class="index-image" /><br />
+                <div class="workout-show">
+                    <a href="{% url 'posts:post_show' post.id %}" class="text-decoration-none">
+                        <p class="hide-text">
+                            {{post.get_workout}} </p>
+                        <ul class="text-capitalize workout-show">
+                            {%for workout in post.get_workout %}
+                            <li>
+                                {{workout}}</li>{%endfor%}
+                        </ul>
+                    </a>
+                </div>
             </div>
+
         </div>
 
         <div class="col-md-5 comments rounded">
