update readme and template

--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -52,7 +52,7 @@
             </div>
             {% empty %}
             <div class="alert alert-warning">
-                No Posts Yet
+                Be the first to post something!
             </div>
             {% endfor %}
 
