--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -35,14 +35,21 @@
 
                             <form action="{% url 'posts:post_like' post.id %}" method="post" class='like-form'>
                                 {% csrf_token %}
-                                {% for liked in allLikes %}
+                                {% for liked in post.users_posts.all %}
+                                {% if liked.post.id == post.id %}
+                                <i class="fas fa-heart text-danger"></i>
+                                {%else%}
+                                <button type='submit' value={{post.id}} class="btn btn-link">
+                                    <i class="far fa-heart"></i></button>
+                                {%endif%}
+                                {% comment %} {% for liked in allLikes %}
                                 {% if liked.post.id == post.id %}
                                 <i class="fas fa-heart text-danger"></i>
                                 {% else %}
                                 <button type='submit' value={{post.id}} class="btn btn-link">
                                     <i class="far fa-heart"></i></button>
                                 {% endif %}
-                                {% endfor %}
+                                {% endfor %} {% endcomment %}
                                 {% comment %} {{post.users_posts.all | length}} {% endcomment %}
                             </form>
                         </div>
