--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -36,7 +36,7 @@
                             <form action="{% url 'posts:post_like' post.id %}" method="post" class='like-form'>
                                 {% csrf_token %}
                                 {% for liked in post.users_posts.all %}
-                                {% if liked.post.id == post.id  and liked.name.id == request.user.id %}
+                                {% if liked.post_id == post.id  %}
                                 <i class="fas fa-heart text-danger"></i>
                                 {%else%}
                                 <button type='submit' value={{post.id}} class="btn btn-link">
