--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -35,15 +35,6 @@
 
                             <form action="{% url 'posts:post_like' post.id %}" method="post" class='like-form'>
                                 {% csrf_token %}
-                                {% for liked in post.users_posts.all %}
-                                {% if liked.post_id == post.id  %}
-                                <button type='submit' value={{post.id}} class="btn btn-link"><i
-                                        class="fas fa-heart text-danger"></i></button>
-                                {%else%}
-                                <button type='submit' value={{post.id}} class="btn btn-link">
-                                    <i class="far fa-heart"></i></button>
-                                {%endif%}
-                                {%endfor%}
                                 {% comment %} {% for liked in allLikes %}
                                 {% if liked.post.id == post.id %}
                                 <button type='submit' value={{post.id}} class="btn btn-link"><i
@@ -54,7 +45,24 @@
                                 {% endif %}
                                 {% endfor %} {% endcomment %}
                                 {% comment %} {{post.users_posts.all | length}} {% endcomment %}
+                                {% for like in userLikes %}
+                                {% if like.post_id == post.id and like.user_id == request.user.id%}
 
+                                <button type='submit' value={{post.id}} class="btn btn-link"><i
+                                        class="fas fa-heart text-danger"></i></button>
+
+                                {%endif %}
+                                {%endfor%}
+
+                                {% if userLikes not in allLikes %}
+                                <button type='submit' value={{post.id}} class="btn btn-link">
+                                    <i class="far fa-heart"></i></button>
+                                {%endif %}
+                                {% if countLikes == 0 %}
+                                <button type='submit' value={{post.id}} class="btn btn-link">
+                                    <i class="far fa-heart"></i></button>
+                                {%endif %}
+                                {% comment %} {%endfor%} {% endcomment %}
                             </form>
                         </div>
                     </div>
