--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -54,15 +54,15 @@
                                 {%endif %}
                                 {%endfor%}
 
-                                {% if userLikes not in allLikes %}
+                                {% if userLikes not in allLikes or countLikes == 0%}
                                 <button type='submit' value={{post.id}} class="btn btn-link">
                                     <i class="far fa-heart"></i></button>
                                 {%endif %}
 
-                                {% if countLikes == 0 %}
+                                {% comment %} {% if countLikes == 0 %}
                                 <button type='submit' value={{post.id}} class="btn btn-link">
                                     <i class="far fa-heart"></i></button>
-                                {%endif %}
+                                {%endif %} {% endcomment %}
                                 {% comment %} {%endfor%} {% endcomment %}
                             </form>
                         </div>
