update empty for search

--- a/posts/templates/posts/search.html
+++ b/posts/templates/posts/search.html
@@ -65,6 +65,10 @@
                         </div>
                     </div>
                 </div>
+                {%empty%}
+                <div class="empty alert alert-light search" role="alert">
+                    User has not posted anything
+                </div>
             </div>
             {%endfor%}
         </div>
