--- a/posts/templates/posts/search.html
+++ b/posts/templates/posts/search.html
@@ -9,8 +9,9 @@
 <div class=" container">
     <div class="col-md-9">
         <div class="row gy-2">
-            {% for post in user.user_posts.all %}
+            {% comment %} {% for post in user.user_posts.all %} {% endcomment %}
             <div class="col-md-4">
+                {% for post in user.user_posts.all %}
                 <div class="card">
                     {% if post.image %}
                     <img src="{{post.image.url}}" class="index-image" />
